# WappenheimVector

./: CMakeLists.txt  LICENSE  README.md  vector.c
include/wappenheim/: vector.h
test/: CMakeLists.txt  test.cpp
